6 October 2021
Field 'range' in struct ccaseconv changed from 'int' to 'unsigned int'.

5 August 2021
Experiment: theoretically, match can be speeded up by first checking whether
subject and pattern are the same thing. If they are, the match succeeds,
PROVIDED that the thing doesn't contain any flags and only a subset of
operators. The experiment was not a success: programs became slower, because of
the overhead.

3 August 2021
Objects (trees headed by = operator and built in object types, i.e. hash
tables) are space optimized in 64 bit versions. Otherwise unused bits in the
first 64 bit word of the object node are now used to store the bit fields and
reference counter, which previously were in an other 64 bit word. All nodes
(objects, non-object operator nodes and leafs) have the same amount of bits for
reference counting, currently 39. 32 bit versions have 32 bits for objects and
9 bits for all other nodes. (When all 9 bits are used, a new copy is created.)

31 July 2021
For 64-bit versions, the size of the reference counter is enlarged by 32 bits.
Fixed: endless loop when dummy operator evaluates to itself.

20 July 2021
Typo corrected: 'ANY Child' -> 'ANY KIND'

25 January 2021
java-JNI/dk_cst_bracmat.c : Added (*env)->ReleaseStringUTFChars(expr, str);

1 October 2020
xml.c:/ in unquoted (x/html) attribute does not indicate empty tag. /> does.
e.g. <a href=http://www.aaa.bb/cde/index.html>
MLencoding:Check meta tag if xml declaration inconclusive 

30 September 2020
toML: if xml declaration encountered, make sure that there is exactly one "?"
before the ">" of the xml declaration and before all ">" in all Processing
Instructions.

20 June 2020
Removed the third (and last) number from the data structure that is returned by
the bez$ function, since this number is always 0.

17 June 2020
If f=g, then !(&!f) behaves like !!f both in eval and match context.
Fixed bug that permanently attached a ? flag to g when evaluating 17:?(&!f),